--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="window-piece window-7"></div>
                     <div class="window-piece window-8 window-title-container">
                         <div class="window-title">시누의 싸이버스페이스</div>
-                        <a href="https://youtu.be/GIUhpzv47YQ" rel="noreferrer" id="dontletmeleave"><div id="window-closebutton" class="window-closebutton"></div></a>
+                        <a href="https://youtu.be/GIUhpzv47YQ" rel="noreferrer" draggable="false" id="dontletmeleave"><div id="window-closebutton" class="window-closebutton"></div></a>
                     </div>
                     <div class="window-piece window-9"></div>
                 </div>
