add window icon

--- a/index.html
+++ b/index.html
@@ -108,11 +108,16 @@
                 width: var(--window-body-width); height: 44px;
                 display: flex;
             }
+            .window-vbicon {
+                width: 34px;
+                height: 44px;
+                background-image: url('8t.webp');
+            }
             .window-title {
                 text-align: left;
                 padding-top: 10px;
-                padding-left: 7px;
-                padding-right: 7px;
+                padding-left: 5px;
+                padding-right: 5px;
                 font-weight: bold;
                 color: white;
                 background-image: url('8.webp'); 
@@ -256,6 +261,7 @@
                 <div class="window-scan">
                     <div class="window-piece window-7"></div>
                     <div class="window-piece window-8 window-title-container">
+                        <div class="window-vbicon"></div>
                         <div class="window-title">시누의 싸이버스페이스</div>
                         <a href="https://youtu.be/GIUhpzv47YQ" rel="noreferrer" draggable="false" id="dontletmeleave"><div id="window-closebutton" class="window-closebutton"></div></a>
                     </div>
