--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                 text-align: center;
                 user-select: none;
             }
+            @media (orientation: portrait) {
+                body {
+                    height: auto;
+                    padding-top: 30vh;
+                }
+            }
             .container {
                 height: 100%;
                 display: flex;
