--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="preload" as="image" href="6.webp">
         <link rel="preload" as="image" href="7.webp">
         <link rel="preload" as="image" href="8.webp">
+        <link rel="preload" as="image" href="8t.webp">
         <link rel="preload" as="image" href="8x.webp">
         <link rel="preload" as="image" href="8xp.webp">
         <link rel="preload" as="image" href="9.webp">
