--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     case "i": window.location.href = "https://www.instagram.com/just4" + thething; break;
                     case "b": window.location.href = "/blog/"; break;
                     case "t": window.location.href = "/sinutools/"; break;
-                    case "a": window.location.href = "https://autocomm.sinu.pe.kr"; break;
+                    case "a": window.location.href = "https://doolginest.sinu.pe.kr/autocomm/"; break;
                     default: break;
                 }
             }
