use a instead of weird js stuff

--- a/index.html
+++ b/index.html
@@ -264,6 +264,9 @@
                     opacity: 0%;
                 }
             }
+            a { color: black; text-decoration: none; cursor: default; }
+            a:active { color: black; }
+            a:visited { color: black; }
         </style>
     </head>
     <body>
@@ -287,108 +290,118 @@
                                 <div id="hello" class="window-hpane-primary window-hpane-label">반가워요!</div>
                             </div>
                             <div class="wbutton-container">
-                                <div class="wbutton rspacer" data-target="g" onclick="gotoSite('g');">
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-7"></div>
-                                        <div class="wbutton-piece wbutton-8"></div>
-                                        <div class="wbutton-piece wbutton-9"></div>
-                                    </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-4"></div>
-                                        <div class="wbutton-piece wbutton-5">
-                                            <div class="wbutton-content" tabindex="0">GitHub</div>
+                                <a href="https://github.com/sinusinu/">
+                                    <div class="wbutton rspacer">
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-7"></div>
+                                            <div class="wbutton-piece wbutton-8"></div>
+                                            <div class="wbutton-piece wbutton-9"></div>
                                         </div>
-                                        <div class="wbutton-piece wbutton-6"></div>
-                                    </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-1"></div>
-                                        <div class="wbutton-piece wbutton-2"></div>
-                                        <div class="wbutton-piece wbutton-3"></div>
-                                    </div>
-                                </div>
-                                <div class="wbutton" data-target="i" onclick="gotoSite('i');">
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-7"></div>
-                                        <div class="wbutton-piece wbutton-8"></div>
-                                        <div class="wbutton-piece wbutton-9"></div>
-                                    </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-4"></div>
-                                        <div class="wbutton-piece wbutton-5">
-                                            <div class="wbutton-content" tabindex="0">Instagram</div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-4"></div>
+                                            <div class="wbutton-piece wbutton-5">
+                                                <div class="wbutton-content" tabindex="0">GitHub</div>
+                                            </div>
+                                            <div class="wbutton-piece wbutton-6"></div>
                                         </div>
-                                        <div class="wbutton-piece wbutton-6"></div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-1"></div>
+                                            <div class="wbutton-piece wbutton-2"></div>
+                                            <div class="wbutton-piece wbutton-3"></div>
+                                        </div>
                                     </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-1"></div>
-                                        <div class="wbutton-piece wbutton-2"></div>
-                                        <div class="wbutton-piece wbutton-3"></div>
+                                </a>
+                                <a href="https://instagram.com/just4sinu/">
+                                    <div class="wbutton">
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-7"></div>
+                                            <div class="wbutton-piece wbutton-8"></div>
+                                            <div class="wbutton-piece wbutton-9"></div>
+                                        </div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-4"></div>
+                                            <div class="wbutton-piece wbutton-5">
+                                                <div class="wbutton-content" tabindex="0">Instagram</div>
+                                            </div>
+                                            <div class="wbutton-piece wbutton-6"></div>
+                                        </div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-1"></div>
+                                            <div class="wbutton-piece wbutton-2"></div>
+                                            <div class="wbutton-piece wbutton-3"></div>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                             <div>
-                                <div class="wbutton" data-target="b" onclick="gotoSite('b');">
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-7"></div>
-                                        <div class="wbutton-piece wbutton-8-xl"></div>
-                                        <div class="wbutton-piece wbutton-9"></div>
-                                    </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-4"></div>
-                                        <div class="wbutton-piece wbutton-5-xl">
-                                            <div class="wbutton-content" tabindex="0">시누의 블로그</div>
+                                <a href="https://sinu.pe.kr/blog/">
+                                    <div class="wbutton">
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-7"></div>
+                                            <div class="wbutton-piece wbutton-8-xl"></div>
+                                            <div class="wbutton-piece wbutton-9"></div>
                                         </div>
-                                        <div class="wbutton-piece wbutton-6"></div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-4"></div>
+                                            <div class="wbutton-piece wbutton-5-xl">
+                                                <div class="wbutton-content" tabindex="0">시누의 블로그</div>
+                                            </div>
+                                            <div class="wbutton-piece wbutton-6"></div>
+                                        </div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-1"></div>
+                                            <div class="wbutton-piece wbutton-2-xl"></div>
+                                            <div class="wbutton-piece wbutton-3"></div>
+                                        </div>
                                     </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-1"></div>
-                                        <div class="wbutton-piece wbutton-2-xl"></div>
-                                        <div class="wbutton-piece wbutton-3"></div>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                             <div class="inter-title">웹 프로젝트</div>
                             <div>
-                                <div class="wbutton" data-target="t" onclick="gotoSite('t');">
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-7"></div>
-                                        <div class="wbutton-piece wbutton-8-xl"></div>
-                                        <div class="wbutton-piece wbutton-9"></div>
-                                    </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-4"></div>
-                                        <div class="wbutton-piece wbutton-5-xl">
-                                            <div class="wbutton-content" tabindex="0">시누의 잡동사니 도구들</div>
+                                <a href="https://sinu.pe.kr/sinutools/">
+                                    <div class="wbutton">
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-7"></div>
+                                            <div class="wbutton-piece wbutton-8-xl"></div>
+                                            <div class="wbutton-piece wbutton-9"></div>
                                         </div>
-                                        <div class="wbutton-piece wbutton-6"></div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-4"></div>
+                                            <div class="wbutton-piece wbutton-5-xl">
+                                                <div class="wbutton-content" tabindex="0">시누의 잡동사니 도구들</div>
+                                            </div>
+                                            <div class="wbutton-piece wbutton-6"></div>
+                                        </div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-1"></div>
+                                            <div class="wbutton-piece wbutton-2-xl"></div>
+                                            <div class="wbutton-piece wbutton-3"></div>
+                                        </div>
                                     </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-1"></div>
-                                        <div class="wbutton-piece wbutton-2-xl"></div>
-                                        <div class="wbutton-piece wbutton-3"></div>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                             <div>
-                                <div class="wbutton" data-target="a" onclick="gotoSite('a');">
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-7"></div>
-                                        <div class="wbutton-piece wbutton-8-xl"></div>
-                                        <div class="wbutton-piece wbutton-9"></div>
-                                    </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-4"></div>
-                                        <div class="wbutton-piece wbutton-5-xl">
-                                            <div class="wbutton-content" tabindex="0">AI 무인 커뮤니티</div>
+                                <a href="https://doolginest.sinu.pe.kr/autocomm/">
+                                    <div class="wbutton">
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-7"></div>
+                                            <div class="wbutton-piece wbutton-8-xl"></div>
+                                            <div class="wbutton-piece wbutton-9"></div>
                                         </div>
-                                        <div class="wbutton-piece wbutton-6"></div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-4"></div>
+                                            <div class="wbutton-piece wbutton-5-xl">
+                                                <div class="wbutton-content" tabindex="0">AI 무인 커뮤니티</div>
+                                            </div>
+                                            <div class="wbutton-piece wbutton-6"></div>
+                                        </div>
+                                        <div class="wbutton-scan">
+                                            <div class="wbutton-piece wbutton-1"></div>
+                                            <div class="wbutton-piece wbutton-2-xl"></div>
+                                            <div class="wbutton-piece wbutton-3"></div>
+                                        </div>
                                     </div>
-                                    <div class="wbutton-scan">
-                                        <div class="wbutton-piece wbutton-1"></div>
-                                        <div class="wbutton-piece wbutton-2-xl"></div>
-                                        <div class="wbutton-piece wbutton-3"></div>
-                                    </div>
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -413,26 +426,15 @@
                 button.children[1].children[1].children[0].addEventListener("focus", (ev) => { effectFocusButton(button); });
                 button.children[1].children[1].children[0].addEventListener("blur", (ev) => { effectBlurButton(button); effectReleaseButton(button); });
                 button.children[1].children[1].children[0].addEventListener("keydown", (ev) => { if (ev.key === " " || ev.key === "Enter") effectPressButton(button); });
-                button.children[1].children[1].children[0].addEventListener("keyup", (ev) => { if (ev.key === " " || ev.key === "Enter") { effectReleaseButton(button); gotoSite(button.dataset.target) }});
+                button.children[1].children[1].children[0].addEventListener("keyup", (ev) => { if (ev.key === " " || ev.key === "Enter") { effectReleaseButton(button); }});
                 button.addEventListener("pointerdown", (ev) => { effectPressButton(button); });
                 button.addEventListener("pointerup", (ev) => { effectReleaseButton(button); });
                 button.addEventListener("pointerleave", (ev) => { effectReleaseButton(button); });
             }
             var closebutton = document.getElementById("window-closebutton");
             closebutton.addEventListener("pointerdown", (ev) => { closebutton.style.backgroundImage = "url('8xp.webp')"; });
-            closebutton.addEventListener("pointerup", (ev) => { closebutton.style.backgroundImage = "url('8x.webp')"; gotoSite('x'); });
+            closebutton.addEventListener("pointerup", (ev) => { closebutton.style.backgroundImage = "url('8x.webp')"; });
             closebutton.addEventListener("pointerleave", (ev) => { closebutton.style.backgroundImage = "url('8x.webp')"; });
-            
-            // document.addEventListener("keyup", (ev) => {
-            //     switch (ev.key) {
-            //         case "g":
-            //         case "i":
-            //         case "b":
-            //         case "t":
-            //             gotoSite(ev.key);
-            //             break;
-            //     }
-            // });
 
             function effectFocusButton(parentNode) {
                 parentNode.children[0].children[0].classList.add("wbutton-7-focus");
@@ -476,19 +478,6 @@
                 parentNode.children[2].children[0].classList.remove("wbutton-1-active");
                 parentNode.children[2].children[1].classList.remove("wbutton-2-active");
                 parentNode.children[2].children[2].classList.remove("wbutton-3-active");
-            }
-
-            const thething = "sinu";
-
-            function gotoSite(which) {
-                switch (which) {
-                    case "g": window.location.href = "https://github.com/" + thething + thething; break;
-                    case "i": window.location.href = "https://www.instagram.com/just4" + thething; break;
-                    case "b": window.location.href = "/blog/"; break;
-                    case "t": window.location.href = "/sinutools/"; break;
-                    case "a": window.location.href = "https://doolginest.sinu.pe.kr/autocomm/"; break;
-                    default: break;
-                }
             }
 
             function speen() {
