--- a/index.html
+++ b/index.html
@@ -155,16 +155,12 @@
                 flex-direction: row;
                 margin: auto;
             }
-            .wbutton-piece {
-                display: block;
-                margin: auto;
-            }
             .wbutton-7 { background-image: url('b7.webp'); width: 6px; height: 6px; }
             .wbutton-8 { background-image: url('b8.webp'); width: var(--wbutton-body-width); height: 6px; }
             .wbutton-9 { background-image: url('b9.webp'); width: 6px; height: 6px; }
-            .wbutton-4 { background-image: url('b4.webp'); width: 6px; height: var(--wbutton-body-height); }
-            .wbutton-5 { background-image: url('b5.webp'); width: var(--wbutton-body-width); height: var(--wbutton-body-height); }
-            .wbutton-6 { background-image: url('b6.webp'); width: 6px; height: var(--wbutton-body-height); }
+            .wbutton-4 { background-image: url('b4.webp'); width: 6px;                       background-size: 100% 100%; }
+            .wbutton-5 { background-image: url('b5.webp'); width: var(--wbutton-body-width); background-size: 100% 100%; }
+            .wbutton-6 { background-image: url('b6.webp'); width: 6px;                       background-size: 100% 100%; }
             .wbutton-1 { background-image: url('b1.webp'); width: 6px; height: 6px; }
             .wbutton-2 { background-image: url('b2.webp'); width: var(--wbutton-body-width); height: 6px; }
             .wbutton-3 { background-image: url('b3.webp'); width: 6px; height: 6px; }
