--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
             }
             :root {
                 --window-body-width: 320px;
-                --window-body-height: 325px;
                 --wbutton-body-width: 136px;
                 --wbutton-body-width-xl: 292px;
-                --wbutton-body-height: 32px;
             }
             html {
                 margin: 0;
@@ -101,13 +99,12 @@
             }
             .window-piece {
                 display: block;
-                margin: auto;
             }
             .window-7 { background-image: url('7.webp'); width: 6px; height: 44px; }
             .window-9 { background-image: url('9.webp'); width: 6px; height: 44px; }
-            .window-4 { background-image: url('4.webp'); width: 6px; height: var(--window-body-height); }
-            .window-5 { background-image: url('5.webp'); width: var(--window-body-width); height: var(--window-body-height); }
-            .window-6 { background-image: url('6.webp'); width: 6px; height: var(--window-body-height); }
+            .window-4 { background-image: url('4.webp'); width: 6px;                      background-size: 100% 100%; }
+            .window-5 { background-image: url('5.webp'); width: var(--window-body-width); background-size: 100% 100%; }
+            .window-6 { background-image: url('6.webp'); width: 6px;                      background-size: 100% 100%; }
             .window-1 { background-image: url('1.webp'); width: 6px; height: 6px; }
             .window-2 { background-image: url('2.webp'); width: var(--window-body-width); height: 6px; }
             .window-3 { background-image: url('3.webp'); width: 6px; height: 6px; }
@@ -165,7 +162,7 @@
             .wbutton-2 { background-image: url('b2.webp'); width: var(--wbutton-body-width); height: 6px; }
             .wbutton-3 { background-image: url('b3.webp'); width: 6px; height: 6px; }
             .wbutton-8-xl { background-image: url('b8.webp'); width: var(--wbutton-body-width-xl); height: 6px; }
-            .wbutton-5-xl { background-image: url('b5.webp'); width: var(--wbutton-body-width-xl); height: var(--wbutton-body-height); }
+            .wbutton-5-xl { background-image: url('b5.webp'); width: var(--wbutton-body-width-xl); }
             .wbutton-2-xl { background-image: url('b2.webp'); width: var(--wbutton-body-width-xl); height: 6px; }
             .wbutton-7-active { background-image: url('bp7.webp') !important; }
             .wbutton-8-active { background-image: url('bp8.webp') !important; }
@@ -192,9 +189,10 @@
                     margin-top: 1px;
                 }
             }
-            .wbutton-content:focus {
+            .wbutton-content-focusdot {
                 border: 2px dotted black;
                 box-sizing: border-box;
+                text-align: center;
                 outline: none;
             }
             .wbutton-container {
@@ -260,7 +258,12 @@
                     opacity: 0%;
                 }
             }
-            a { color: black; text-decoration: none; cursor: default; }
+            a {
+                color: black;
+                text-decoration: none;
+                cursor: default;
+                outline: none;
+            }
             a:active { color: black; }
             a:visited { color: black; }
         </style>
@@ -273,7 +276,7 @@
                     <div class="window-piece window-8 window-title-container">
                         <div class="window-vbicon"></div>
                         <div class="window-title">시누의 싸이버스페이스</div>
-                        <a href="https://youtu.be/GIUhpzv47YQ" rel="noreferrer" draggable="false" id="dontletmeleave"><div id="window-closebutton" class="window-closebutton"></div></a>
+                        <a tabindex="-1" href="https://youtu.be/GIUhpzv47YQ" rel="noreferrer" draggable="false" id="dontletmeleave"><div id="window-closebutton" class="window-closebutton"></div></a>
                     </div>
                     <div class="window-piece window-9"></div>
                 </div>
@@ -286,7 +289,7 @@
                                 <div id="hello" class="window-hpane-primary window-hpane-label">반가워요!</div>
                             </div>
                             <div class="wbutton-container">
-                                <a href="https://github.com/sinusinu/">
+                                <a class="wbutton-a" href="https://github.com/sinusinu/">
                                     <div class="wbutton rspacer">
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-7"></div>
@@ -296,7 +299,7 @@
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-4"></div>
                                             <div class="wbutton-piece wbutton-5">
-                                                <div class="wbutton-content" tabindex="0">GitHub</div>
+                                                <div class="wbutton-content">GitHub</div>
                                             </div>
                                             <div class="wbutton-piece wbutton-6"></div>
                                         </div>
@@ -307,7 +310,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="https://instagram.com/just4sinu/">
+                                <a class="wbutton-a" href="https://instagram.com/just4sinu/">
                                     <div class="wbutton">
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-7"></div>
@@ -317,7 +320,7 @@
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-4"></div>
                                             <div class="wbutton-piece wbutton-5">
-                                                <div class="wbutton-content" tabindex="0">Instagram</div>
+                                                <div class="wbutton-content">Instagram</div>
                                             </div>
                                             <div class="wbutton-piece wbutton-6"></div>
                                         </div>
@@ -330,7 +333,7 @@
                                 </a>
                             </div>
                             <div>
-                                <a href="https://sinu.pe.kr/blog/">
+                                <a class="wbutton-a" href="https://sinu.pe.kr/blog/">
                                     <div class="wbutton">
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-7"></div>
@@ -340,7 +343,7 @@
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-4"></div>
                                             <div class="wbutton-piece wbutton-5-xl">
-                                                <div class="wbutton-content" tabindex="0">시누의 블로그</div>
+                                                <div class="wbutton-content">시누의 블로그</div>
                                             </div>
                                             <div class="wbutton-piece wbutton-6"></div>
                                         </div>
@@ -354,7 +357,7 @@
                             </div>
                             <div class="inter-title">웹 프로젝트</div>
                             <div>
-                                <a href="https://sinu.pe.kr/sinutools/">
+                                <a class="wbutton-a" href="https://sinu.pe.kr/sinutools/">
                                     <div class="wbutton">
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-7"></div>
@@ -364,7 +367,7 @@
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-4"></div>
                                             <div class="wbutton-piece wbutton-5-xl">
-                                                <div class="wbutton-content" tabindex="0">시누의 잡동사니 도구들</div>
+                                                <div class="wbutton-content">시누의 잡동사니 도구들</div>
                                             </div>
                                             <div class="wbutton-piece wbutton-6"></div>
                                         </div>
@@ -377,7 +380,7 @@
                                 </a>
                             </div>
                             <div>
-                                <a href="https://doolginest.sinu.pe.kr/autocomm/">
+                                <a class="wbutton-a" href="https://doolginest.sinu.pe.kr/autocomm/">
                                     <div class="wbutton">
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-7"></div>
@@ -387,7 +390,7 @@
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-4"></div>
                                             <div class="wbutton-piece wbutton-5-xl">
-                                                <div class="wbutton-content" tabindex="0">AI 무인 커뮤니티</div>
+                                                <div class="wbutton-content">AI 무인 커뮤니티</div>
                                             </div>
                                             <div class="wbutton-piece wbutton-6"></div>
                                         </div>
@@ -419,13 +422,17 @@
             var buttons = document.getElementsByClassName("wbutton");
             for (var i = 0; i < buttons.length; i++) {
                 const button = buttons[i];
-                button.children[1].children[1].children[0].addEventListener("focus", (ev) => { effectFocusButton(button); });
-                button.children[1].children[1].children[0].addEventListener("blur", (ev) => { effectBlurButton(button); effectReleaseButton(button); });
-                button.children[1].children[1].children[0].addEventListener("keydown", (ev) => { if (ev.key === " " || ev.key === "Enter") effectPressButton(button); });
-                button.children[1].children[1].children[0].addEventListener("keyup", (ev) => { if (ev.key === " " || ev.key === "Enter") { effectReleaseButton(button); }});
                 button.addEventListener("pointerdown", (ev) => { effectPressButton(button); });
                 button.addEventListener("pointerup", (ev) => { effectReleaseButton(button); });
                 button.addEventListener("pointerleave", (ev) => { effectReleaseButton(button); });
+            }
+            var buttonAs = document.getElementsByClassName("wbutton-a");
+            for (var i = 0; i < buttonAs.length; i++) {
+                const buttonA = buttonAs[i];
+                buttonA.addEventListener("focus", (ev) => { effectFocusButton(buttonA.children[0]); });
+                buttonA.addEventListener("blur", (ev) => { effectBlurButton(buttonA.children[0]); effectReleaseButton(buttonA.children[0]); });
+                buttonA.addEventListener("keydown", (ev) => { if (ev.key === " " || ev.key === "Enter") effectPressButton(buttonA.children[0]); });
+                buttonA.addEventListener("keyup", (ev) => { if (ev.key === " " || ev.key === "Enter") { effectReleaseButton(buttonA).children[0]; }});
             }
             var closebutton = document.getElementById("window-closebutton");
             closebutton.addEventListener("pointerdown", (ev) => { closebutton.style.backgroundImage = "url('8xp.webp')"; });
@@ -437,6 +444,8 @@
                 parentNode.children[0].children[1].classList.add("wbutton-8-focus");
                 parentNode.children[0].children[2].classList.add("wbutton-9-focus");
                 parentNode.children[1].children[0].classList.add("wbutton-4-focus");
+                parentNode.children[1].children[1].children[0].classList.remove("wbutton-content");
+                parentNode.children[1].children[1].children[0].classList.add("wbutton-content-focusdot");
                 parentNode.children[1].children[2].classList.add("wbutton-6-focus");
                 parentNode.children[2].children[0].classList.add("wbutton-1-focus");
                 parentNode.children[2].children[1].classList.add("wbutton-2-focus");
@@ -448,6 +457,8 @@
                 parentNode.children[0].children[1].classList.remove("wbutton-8-focus");
                 parentNode.children[0].children[2].classList.remove("wbutton-9-focus");
                 parentNode.children[1].children[0].classList.remove("wbutton-4-focus");
+                parentNode.children[1].children[1].children[0].classList.add("wbutton-content");
+                parentNode.children[1].children[1].children[0].classList.remove("wbutton-content-focusdot");
                 parentNode.children[1].children[2].classList.remove("wbutton-6-focus");
                 parentNode.children[2].children[0].classList.remove("wbutton-1-focus");
                 parentNode.children[2].children[1].classList.remove("wbutton-2-focus");
