use full path to ditch feature thing

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <div class="window-piece window-8 window-title-container">
                         <div class="window-vbicon"></div>
                         <div class="window-title">시누의 싸이버스페이스</div>
-                        <a tabindex="-1" href="https://youtu.be/GIUhpzv47YQ" rel="noreferrer" draggable="false" id="dontletmeleave"><div id="window-closebutton" class="window-closebutton"></div></a>
+                        <a tabindex="-1" href="https://www.youtube.com/watch?v=GIUhpzv47YQ" rel="noreferrer" draggable="false" id="dontletmeleave"><div id="window-closebutton" class="window-closebutton"></div></a>
                     </div>
                     <div class="window-piece window-9"></div>
                 </div>
