--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                                     </div>
                                 </a>
                             </div>
-                            <div>
-                                <a class="wbutton-a" href="https://doolginest.sinu.pe.kr/autocomm/">
+                            <!-- <div>
+                                <a class="wbutton-a" href="https://.../autocomm/">
                                     <div class="wbutton">
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-7"></div>
@@ -401,7 +401,7 @@
                                         </div>
                                     </div>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="window-piece window-6"></div>
