Add sinutoys link

--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                                     </div>
                                 </a>
                             </div>
-                            <!-- <div>
-                                <a class="wbutton-a" href="https://.../autocomm/">
+                            <div>
+                                <a class="wbutton-a" href="https://sinu.pe.kr/sinutoys/">
                                     <div class="wbutton">
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-7"></div>
@@ -390,7 +390,7 @@
                                         <div class="wbutton-scan">
                                             <div class="wbutton-piece wbutton-4"></div>
                                             <div class="wbutton-piece wbutton-5-xl">
-                                                <div class="wbutton-content">AI 무인 커뮤니티</div>
+                                                <div class="wbutton-content">시누의 장난감 상자</div>
                                             </div>
                                             <div class="wbutton-piece wbutton-6"></div>
                                         </div>
@@ -401,7 +401,7 @@
                                         </div>
                                     </div>
                                 </a>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="window-piece window-6"></div>
