--- a/index.html
+++ b/index.html
@@ -58,25 +58,19 @@
             html {
                 margin: 0;
                 padding: 0;
-                height: 100vh;
+                height: 100dvh;
             }
             body {
                 margin: 0;
                 padding: 0;
-                width: 100vw;
-                height: 100vh;
+                width: 100dvw;
+                height: 100dvh;
                 overflow: hidden;
                 background: #3a6ea6;
                 color: white;
                 font-family: 'Pretendard', sans-serif;
                 text-align: center;
                 user-select: none;
-            }
-            @media (orientation: portrait) {
-                body {
-                    height: auto;
-                    padding-top: 20vh;
-                }
             }
             .container {
                 height: 100%;
